# Gadget

./: .gitignore  CMakeLists.txt  README.md  berkelydb_patch  config.txt  install.sh  install_build_essentals.sh
configs/: README.md  config.txt  config2.txt
experiments/: CMake.Rocks  README.md
experiments/cmakes/: CMakeLists.txt
replayer/: .gitignore  README.md  compile.sh  faster_patch  genycsbtrace.sh  install.sh  plg.cpp  plg.h  plg_berkeley.cpp  plg_berkeley.h  plg_faster.cpp  plg_faster.h  plg_rocksdb.cpp  plg_rocksdb.h  plot.py  plot2.py  replayer.cpp  runfig12.py  runfig12.sh  runmyeval.sh  util.h
replayer/workload/: mywltemplate  ycsbwl_contaggr_hotspot  ycsbwl_contaggr_latest  ycsbwl_contaggr_sequential  ycsbwl_tumbinc_hotspot  ycsbwl_tumbinc_latest  ycsbwl_tumbinc_sequential
reproduceEuroSysResults/: README.md
src/: CMake.BerkeleyDB  CMake.Faster  CMake.Lethe  CMake.Rocks  CMakeLists.MacAndRocksDB  CMakeLists.txt  README.md
src/core/: PerformanceMetrics.cpp  config.h  main.cpp  tests.h
src/include/gadget/: operation.h  performanceMetrics.h
src/include/gadget/distributions/: arrival.h  distributionParamters.h  key.h  keyPopularity.h  keySize.h  serviceTime.h  value.h  windowLength.h
src/include/gadget/event/: event.h  eventGenerator.h  eventGeneratorBuilder.h  eventGeneratorParameters.h  gadgetEventGenerator.h  memoryEvents.h  traceEvents.h
src/include/gadget/kvwrappers/: BerecklyDB2.h  BerecklyDB4.h  Faster3.h  RocksDBWrapper.h  berecklyDB.h  berkeley.main  berkeley.temp  faster.h  faster.main  faster2.h  fasterBeforeCleaning.h  fasterWorksForStrings.h  fasterWorksforNumbers.h  fileWrapper.h  kvwrapper.h  lethe.h  lethe.main  lethe.temp  lethe2.h  rocksdb.main  rocksdb.temp  trash.h  wrapperBuilder.h
src/include/gadget/operator/: oneStreamContinuousOperator.h  oneStreamSessionWindowOperator.h  oneStreamWindowOperator.h  operator.h  twoStreamContinuousOperator.h  twoStreamWindowOperator.h
src/include/gadget/operator/operators/: continuousAggregation.h  continuousJoin.h  flinkReplayer.h  intervalJoin.h  joinSliding.h  joinTumbling.h  operatorBuilder.h  operatorParameters.h  sessionHolistic.h  sessionIncremental.h  slidingAllHolistic.h  slidingAllIncremental.h  slidingKeyedHolistic.h  slidingKeyedIncremental.h  tumblingAllHolistic.h  tumblingAllIncremental.h  tumblingKeyedHolistic.h  tumblingKeyedIncremental.h  ycsbReplayer.h
src/include/gadget/statemachine/: conJoinSM.h  contAggrSM.h  intervalJoinSM.h  stateMachineBuilder.h  stateMachines.h  windowHolisticSM.h  windowIncrementalSM.h  windowSessionSM.h
src/operators/: continuousAggregation.cpp  continuousJoin.cpp  flinkTrace.cpp  intervalJoin.cpp  joinSliding.cpp  joinTumbling.cpp  sessionHolistic.cpp  sessionIncremental.cpp  slidingAllHolistic.cpp  slidingAllIncremental.cpp  slidingKeyedHolistic.cpp  slidingKeyedIncremental.cpp  tumblingAllIHolistic.cpp  tumblingAllIncremental.cpp  tumblingKeyedHolistic.cpp  tumblingKeyedIncremental.cpp  ycsbTrace.cpp
tests/: CMakeLists.txt  main.cpp
tests/operators/: ConAggrTest.cpp  joinSliding.cpp  joinTumbling.cpp  slidingAllHolistic.cpp  slidingAllIncremental.cpp  slidingKeyedHolsitic.cpp  slidingKeyedIncremental.cpp  tumblingAllHolistic.cpp  tumblingAllIncremental.cpp  tumblingKeyedHolistic.cpp  tumblingKeyedIncremental.cpp
